# Teaching-Language-Models-to-Learn-from-Logical-Feedback

./: .gitattributes  .gitignore  README.md  pyproject.toml  smoke_test_reward.py
CONFIGS/: config.yaml
CONFIGS/DATASETS/: folio.yaml
CONFIGS/MODELS/: GRPO.yaml  qwen2.5-7b.yaml  qwen2.5.yaml  qwen3.5-9b.yaml
CONFIGS/TASKS/: logical_feedback.yaml
CONFIGS/TRAINERS/: GRPO.yaml  GRPO_qwen2.5-7b.yaml  GRPO_qwen3.5-9b.yaml  GRPO_qwen3.5-9b_8gen.yaml  SFT.yaml  SFT_qwen3.5-9b.yaml
DATA/FOLIO/: README.md  corrections.jsonl  folio_debug.jsonl  folio_test.jsonl  folio_test_clean_label.jsonl  folio_test_clean_syntax.jsonl  folio_test_error.jsonl  folio_train.jsonl  folio_train_clean_label.jsonl  folio_train_clean_syntax.jsonl  folio_train_error.jsonl  folio_validation.jsonl  folio_validation_clean_label.jsonl  folio_validation_clean_syntax.jsonl  folio_validation_error.jsonl
SLURM/: organize_logs.sh  plot_training_results.py  profile_imports.sh  setup_env.sh  submit_and_tail.sh  summarize_logs.py  train_qwen2.5-3b_test.job  train_qwen2.5-7b.job  train_qwen3.5-4b_16gen_test.job  train_qwen3.5-4b_8gen_test.job  train_qwen3.5-9b.job  train_sft_qwen3.5-9b.job  train_test.job
SLURM/EVAL/: evaluate_dp_qwen3.5-9b.job  evaluate_dp_qwen3.5-9b_smoke.job  evaluate_plotted_metrics_qwen3.5-9b.job  evaluate_plotted_metrics_qwen3.5-9b_smoke.job  evaluate_raw_qwen3.5-9b.job
logs/: job_22966091.out  job_23010587.out
src/: autoformalization.py  evaluate_autoformalization.py  evaluate_plotted_metrics.py  evaluate_saved_dp_paths.py  plot_evaluation_metrics.py  trainer.py
(+25 files in other folders)
