[project]
name = "teaching-language-models-to-learn-from-logical-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "agent-reasoning",
    "datasets>=4.8.4",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.0",
    "mlflow==3.4.0",
    "trl>=1.1.0",
]

[tool.uv.sources]
agent-reasoning = { path = "../agent_reasoning_rl", editable = true }
